--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite --host",
-    "build": "vite build --base=/js-test/",
+    "build": "vite build --base=/js-test/; git add .; git commit -m 'update'; git push",
     "preview": "vite preview",
     "push": "git add .; git commit -m 'update'; git push"
   },
